--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <h3>Articles</h3>
   <ul>
     <li>
-      <a href="./DossieArticles/1lettreFrancheDeSevres.html">
+      <a href="../DossieArticles/1lettreFrancheDeSevres.html">
         Lettre franche de Sèvres — 1793
       </a>
     </li>
