--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <h3>Articles</h3>
   <ul>
     <li>
-      <a href="../DossieArticles/1lettreFrancheDeSevres.html">
+      <a href="./">
         Lettre franche de Sèvres — 1793
       </a>
     </li>
@@ -123,7 +123,7 @@
       <h2>Derniers articles</h2>
 
       <h3>
-        <a href="./DossieArticles/1lettreFrancheDeSevres.html">
+        <a href="./DossierArticles/1lettreFrancheDeSevres.html">
           Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793
         </a>
       </h3>
@@ -136,7 +136,7 @@
       </p>
 
       <p class="read-more">
-        <a href="./DossieArticles/1lettreFrancheDeSevres.html">
+        <a href="./DossierArticles/1lettreFrancheDeSevres.html">
           Lire l’article →
         </a>
       </p>
