--- a/DossierArticles/lettreDeBlere .html
+++ b/DossierArticles/lettreDeBlere .html
@@ -37,10 +37,12 @@
   </div>
 
   <!-- CENTRE : titre -->
-    <div class="site-title">
+  <div class="header-center">
+    <a class="site-title">
       <strong>Histoire postale</strong>
       <small>Études, marques et itinéraires</small>
-    </div>
+    </a>
+  </div>
 
   <!-- DROITE : recherche -->
   <div class="header-right">
@@ -73,6 +75,16 @@
     <li><a href="./categories/revolution.html">Révolution & Empire</a></li>
     <li><a href="./bibliographie.html">Bibliographie</a></li>
   </ul>
+
+  <h3>Articles</h3>
+  <ul>
+    <li>
+      <a href="./articles/sevres-1793-1.html">
+        Une lettre de Bléré réexpédiée sous l’Ancien Régime (1783)
+      </a>
+    </li>
+    <!-- Articles futurs ajoutés ici -->
+  </ul>
 </nav>
 
 <!-- ================= CONTENU PRINCIPAL ================= -->
@@ -82,13 +94,11 @@
   <section class="article-head">
     <h1>Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793</h1>
     <p class="meta">
-      Analyse d’un courrier administratif en franchise 
+      Analyse d’un courrier administratif en franchise — page 1
     </p>
   </section>
   <!-- ================= ARTICLE ================= -->
   <article>
-
-    <h2 class="article-subtitle">Lettre franche de Sèvres — 1793</h2>
 
     <!-- FIGURE DROITE : vignette associée AU paragraphe suivant -->
     <figure class="float-right">
@@ -107,7 +117,7 @@
       distincte de la Poste aux lettres, laquelle assure l’acheminement depuis les communes périphériques jusqu’à l’entrée dans la capitale. 
       Toute correspondance provenant de Sèvres et destinée à Paris suit donc nécessairement ce schéma en deux temps, acheminement puis distribution locale [1].
       <button class="note-btn" data-note="note1">[note]</button>.
-  </p>
+    </p>
 
     <div class="note" id="note1">
       <strong>Note.</strong>
@@ -115,22 +125,14 @@
       territoriales ultérieures.
     </div>
 
-      <a id="call-ref2"></a>
-      <a id="call-ref1"></a>
-
-  <p>
-    La face de la lettre porte une marque linéaire d’origine « SEVE »
-    <span style="color:red;">(flèche rouge)</span>.
-    Cette graphie abrégée correspond au bureau de Sèvres.
-    Les marques linéaires de la fin du XVIIIᵉ siècle ne sont pas normalisées
-    et présentent fréquemment des formes tronquées,
-    notamment par suppression de la consonne finale,
-    usage bien attesté pour des bureaux secondaires ou suburbains
-    <a href="#ref2">[2]</a>.
-    Aucune autre localité dotée d’un bureau postal ne correspond à la graphie « SEVE »
-    pour la période considérée, ce qui permet une attribution certaine à Sèvres.
-    <a href="#ref1">[1]</a>.
-  </p>
+    <p>
+      La face de la lettre porte une marque linéaire d’origine « SEVE » <span style="color:red;">(flèche rouge)</span>. 
+      Cette graphie abrégée correspond au bureau de Sèvres. Les marques linéaires de la fin du XVIIIᵉ siècle
+      ne sont pas normalisées et présentent fréquemment des formes tronquées, 
+      notamment par suppression de la consonne finale, usage bien attesté pour des bureaux secondaires ou suburbains [2]. 
+      Aucune autre localité dotée d’un bureau postal ne correspond à la graphie « SEVE » pour la période considérée, ce qui permet une attribution certaine à Sèvres.
+      <a href="#ref1">[1]</a>.
+    </p>
 
     <!-- FIGURE GAUCHE : vignette associée AU paragraphe suivant -->
     <figure class="float-left">
@@ -142,16 +144,12 @@
       </figcaption>
     </figure>
 
-    <p id="call-ref3">
-      La suscription comporte en outre la mention manuscrite « Franche »
-      <span style="color:rgb(13, 104, 2);">(flèche verte)</span>.
-      Cette franchise s’explique par la qualité du destinataire : la lettre est adressée
-      au maire et officiers municipaux d’une commune, c’est-à-dire à une autorité constituée.
-      Les dispositions postales rappelées après le décret des 26 août – 2 septembre 1792
-      prévoient la franchise pour les correspondances adressées aux administrations publiques,
-      exercée en nom collectif pour ces dernières.
-      L’absence de toute taxation chiffrée confirme que la lettre a été admise régulièrement
-      en franchise par le service postal.
+    <p>
+      La suscription comporte en outre la mention manuscrite « Franche »<span style="color:rgb(13, 104, 2);">(flèche verte)</span>. 
+      Cette franchise s’explique par la qualité du destinataire : la lettre est adressée au maire et officiers municipaux d’une commune, 
+      c’est-à-dire à une autorité constituée. Les dispositions postales rappelées après le décret des 26 août – 2 septembre 1792
+       prévoient la franchise pour les correspondances adressées aux administrations publiques, exercée en nom collectif pour ces dernières. 
+      L’absence de toute taxation chiffrée confirme que la lettre a été admise régulièrement en franchise par le service postal.
       <a href="#ref3">[3]</a>
     </p>
 
@@ -162,10 +160,10 @@
       mais signale l’admission à la distribution sans perception de port, conformément aux usages de la Petite Poste [1].
     </p>
 
-    <p id="call-ref4">
+    <p>
       L’examen de la typologie de la marque et du parcours permet d’attribuer le traitement au bureau K. 
       Il convient de rappeler que le bureau K est un bureau chargé du service de la banlieue, comme l’indiquent 
-      explicitement des notices spécialisées et publications associatives<a href="#ref4">[4]</a>. Cette fonction correspond exactement à l’origine
+      explicitement des notices spécialisées et publications associatives<a href="#ref4">[4]</a>[4]</a>. Cette fonction correspond exactement à l’origine
       périphérique de la lettre, Sèvres faisant partie des communes desservies par ce service. 
       L’intervention du bureau K constitue ainsi un élément cohérent et structurant du parcours postal.
     </p>
@@ -176,7 +174,7 @@
       Dans le contexte de la Petite Poste, ce type d’inscription manuscrite isolée correspond à un repère 
       interne de service (ordre de traitement, de tournée ou de contrôle), parfois associé à une lettre ou un signe distinctif. 
       En l’absence de source permettant d’en préciser davantage la signification, il convient de s’en tenir à cette lecture fonctionnelle, 
-      conforme aux pratiques internes de la distribution parisienne de la fin du XVIIIᵉ siècle<a href="#ref4">[4]</a>.
+      conforme aux pratiques internes de la distribution parisienne de la fin du XVIIIᵉ siècle<a href="#4">[4]</a>.
     </p>
 
     <!-- FIGURE DROITE : vignette associée AU paragraphe suivant -->
@@ -184,7 +182,8 @@
       <img src="../Images/date.png"
            alt="Marque linéaire SEVE et PP triangulaire">
       <figcaption>
-        Fig. 3 — L’intérieur de la lettre qui confirme la date .
+        Fig. 1 — Marque linéaire d’origine « SEVE » et marque « PP » triangulaire
+        de la Petite Poste (1793).
       </figcaption>
     </figure>
 
@@ -202,35 +201,31 @@
 
 
     <!-- ================= RÉFÉRENCES ================= -->
-<section class="references">
-  <h2>Références</h2>
-  <ol>
-<!--Note1-->    
-    <li id="ref1">
-      CHAUVET — <em>La Petite Poste de Paris</em>, passim.
-      <a href="#call-ref1" aria-label="Retour au passage cité">↩</a>
-    </li>
+    <section class="references">
+      <h2>Références</h2>
+      <ol>
+        <li id="ref1">
+          CHAUVET — <em>La Petite Poste de Paris</em>, passim.
+          <a href="#article">↩</a>
+        </li>
 
-<!--Note2-->     
-<li id="ref2">
-      POTHION, <em>Les marques postales françaises 1700-1850</em>.
-      <a href="#call-ref2" aria-label="Retour au passage cité">↩</a>
-    </li>
+        <li id="ref2">
+          POTHION, Les marques postales françaises 1700-1850.
+          <a href="#article">↩</a>
+        </li>
 
-<!--Note3--> 
-    <li id="ref3">
-      Décret des 26 août – 2 septembre 1792, état des franchises postales.
-      <a href="#call-ref3" aria-label="Retour au passage cité">↩</a>
-    </li>
+        <li id="ref3">
+          Décret des 26 août – 2 septembre 1792, état des franchises postales
+          <a href="#article">↩</a>
+        </li>
 
-<!--Note4--> 
-    <li id="ref4">
-      Notices spécialisées sur les bureaux alphabétiques de la Petite Poste,
-      bureau K (service de la banlieue).
-      <a href="#call-ref4" aria-label="Retour au passage cité">↩</a>
-    </li>
-  </ol>
-</section>
+        <li id="ref4">
+          Notices spécialisées sur les bureaux alphabétiques de la Petite Poste, bureau K (service de la banlieue).
+          <a href="#article">↩</a>
+        </li>
+
+      </ol>
+    </section>
 
     <!-- ================= PAGINATION ================= -->
     <nav class="pagination" aria-label="Pagination de l’article">
