--- a/DossierArticles/1lettreFrancheDeSevres.html
+++ b/DossierArticles/1lettreFrancheDeSevres.html
@@ -235,7 +235,7 @@
     <!-- ================= PAGINATION ================= -->
     <nav class="pagination" aria-label="Pagination de l’article">
       <a aria-disabled="true">← Page précédente</a>
-      <a href="../Petit-Poste/petitePosteDeParis.html">Page suivante →</a>
+      <a href="../index.html">Accueil →</a>
     </nav>
 
   </article>
