--- a/DossierArticles/lettreDeBlere .html
+++ b/DossierArticles/lettreDeBlere .html
@@ -37,12 +37,10 @@
   </div>
 
   <!-- CENTRE : titre -->
-  <div class="header-center">
-    <a class="site-title">
+    <div class="site-title">
       <strong>Histoire postale</strong>
       <small>Études, marques et itinéraires</small>
-    </a>
-  </div>
+    </div>
 
   <!-- DROITE : recherche -->
   <div class="header-right">
@@ -75,16 +73,6 @@
     <li><a href="./categories/revolution.html">Révolution & Empire</a></li>
     <li><a href="./bibliographie.html">Bibliographie</a></li>
   </ul>
-
-  <h3>Articles</h3>
-  <ul>
-    <li>
-      <a href="./articles/sevres-1793-1.html">
-        Une lettre de Bléré réexpédiée sous l’Ancien Régime (1783)
-      </a>
-    </li>
-    <!-- Articles futurs ajoutés ici -->
-  </ul>
 </nav>
 
 <!-- ================= CONTENU PRINCIPAL ================= -->
@@ -92,145 +80,171 @@
 
   <!-- En-tête de l’article -->
   <section class="article-head">
-    <h1>Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793</h1>
-    <p class="meta">
-      Analyse d’un courrier administratif en franchise — page 1
-    </p>
+    <h1>Une lettre de Bléré réexpédiée sous l’Ancien Régime (1783)</h1>
+      <p class="meta">
+        Étude du fonctionnement d'un bureau secondaire.      
+      </p>
   </section>
   <!-- ================= ARTICLE ================= -->
   <article>
 
-    <!-- FIGURE DROITE : vignette associée AU paragraphe suivant -->
-    <figure class="float-right">
-      <img src="../Images/SeveRecto.png"
-           alt="Marque linéaire SEVE et PP triangulaire">
-      <figcaption>
-        Fig. 1 — Marque linéaire d’origine « SEVE » et marque « PP » triangulaire
-        de la Petite Poste (1793).
-      </figcaption>
-    </figure>
-
-  <p>
-      La lettre étudiée est datée du 30 juillet 1793, l’an 2ᵉ de la République, et est adressée à Paris. 
-      Elle est expédiée de Sèvres, alors comprise dans le département de la Seine. 
-      À cette date, la distribution du courrier dans Paris relève de la Petite Poste, 
-      distincte de la Poste aux lettres, laquelle assure l’acheminement depuis les communes périphériques jusqu’à l’entrée dans la capitale. 
-      Toute correspondance provenant de Sèvres et destinée à Paris suit donc nécessairement ce schéma en deux temps, acheminement puis distribution locale [1].
-      <button class="note-btn" data-note="note1">[note]</button>.
-    </p>
-
-    <div class="note" id="note1">
-      <strong>Note.</strong>
-      — Sèvres relève alors du département de la Seine, avant les réorganisations
-      territoriales ultérieures.
-    </div>
-
-    <p>
-      La face de la lettre porte une marque linéaire d’origine « SEVE » <span style="color:red;">(flèche rouge)</span>. 
-      Cette graphie abrégée correspond au bureau de Sèvres. Les marques linéaires de la fin du XVIIIᵉ siècle
-      ne sont pas normalisées et présentent fréquemment des formes tronquées, 
-      notamment par suppression de la consonne finale, usage bien attesté pour des bureaux secondaires ou suburbains [2]. 
-      Aucune autre localité dotée d’un bureau postal ne correspond à la graphie « SEVE » pour la période considérée, ce qui permet une attribution certaine à Sèvres.
-      <a href="#ref1">[1]</a>.
-    </p>
-
-    <!-- FIGURE GAUCHE : vignette associée AU paragraphe suivant -->
-    <figure class="float-left">
-      <img src="../Images/SeveVerso.png"
-           alt="Annotation manuscrite 13 au verso">
-      <figcaption>
-        Fig. 2 — Annotation manuscrite « 13 » accompagnée d’un signe assimilable
-        à un « W », portée au verso.
-      </figcaption>
-    </figure>
-
-    <p>
-      La suscription comporte en outre la mention manuscrite « Franche »<span style="color:rgb(13, 104, 2);">(flèche verte)</span>. 
-      Cette franchise s’explique par la qualité du destinataire : la lettre est adressée au maire et officiers municipaux d’une commune, 
-      c’est-à-dire à une autorité constituée. Les dispositions postales rappelées après le décret des 26 août – 2 septembre 1792
-       prévoient la franchise pour les correspondances adressées aux administrations publiques, exercée en nom collectif pour ces dernières. 
-      L’absence de toute taxation chiffrée confirme que la lettre a été admise régulièrement en franchise par le service postal.
-      <a href="#ref3">[3]</a>
-    </p>
-
-    <p>
-      La prise en charge par la Petite Poste de Paris est matérialisée par une marque « PP » de forme triangulaire apposée sur la face <span style="color:rgb(83, 43, 43);">(flèche marron)</span>. 
-      Cette marque atteste l’entrée de la lettre dans le circuit de distribution locale parisien. 
-      Dans le cas d’une lettre admise en franchise, elle ne correspond pas à un affranchissement privé, 
-      mais signale l’admission à la distribution sans perception de port, conformément aux usages de la Petite Poste [1].
-    </p>
-
-    <p>
-      L’examen de la typologie de la marque et du parcours permet d’attribuer le traitement au bureau K. 
-      Il convient de rappeler que le bureau K est un bureau chargé du service de la banlieue, comme l’indiquent 
-      explicitement des notices spécialisées et publications associatives<a href="#ref4">[4]</a>[4]</a>. Cette fonction correspond exactement à l’origine
-      périphérique de la lettre, Sèvres faisant partie des communes desservies par ce service. 
-      L’intervention du bureau K constitue ainsi un élément cohérent et structurant du parcours postal.
-    </p>
-    <p>
-      Le verso de la lettre présente une annotation manuscrite composée du nombre « 13 », 
-      accompagné d’un signe ressemblant à un « W », tracés dans la même encre (fig. 2). 
-      Cet ensemble ne peut être interprété comme une taxation, la lettre étant admise en franchise. 
-      Dans le contexte de la Petite Poste, ce type d’inscription manuscrite isolée correspond à un repère 
-      interne de service (ordre de traitement, de tournée ou de contrôle), parfois associé à une lettre ou un signe distinctif. 
-      En l’absence de source permettant d’en préciser davantage la signification, il convient de s’en tenir à cette lecture fonctionnelle, 
-      conforme aux pratiques internes de la distribution parisienne de la fin du XVIIIᵉ siècle<a href="#4">[4]</a>.
-    </p>
+    <h2 class="article-subtitle">Lettre franche de Sèvres — 1793</h2>
 
     <!-- FIGURE DROITE : vignette associée AU paragraphe suivant -->
     <figure class="float-right">
-      <img src="../Images/date.png"
-           alt="Marque linéaire SEVE et PP triangulaire">
+      <img src="../Images/blererecto.png"
+           alt="Le pli est expédié en port dû depuis Bléré, localité dotée d’un bureau secondaire. ">
       <figcaption>
-        Fig. 1 — Marque linéaire d’origine « SEVE » et marque « PP » triangulaire
-        de la Petite Poste (1793).
+        Fig. 1 — Pli expédié en port dû depuis Bléré, localité dotée d’un bureau secondaire. 
       </figcaption>
     </figure>
-
+    
+<!--Paragraphe 1-->
     <p>
-      L’intérieur de la lettre (fig. 3) confirme la date et le contexte administratif de l’envoi,
-      sans apporter d’élément contradictoire aux indications fournies par les marques postales.
-      L’ensemble des données matérielles permet ainsi de reconstituer un parcours cohérent : 
-      dépôt à Sèvres avec marque d’origine « SEVE », admission en franchise en raison du destinataire officiel, 
-      acheminement vers Paris par la Poste aux lettres, entrée dans le circuit de la Petite Poste, 
-      traitement par le bureau de banlieue K, puis distribution locale avec repérage interne manuscrit au verso. 
-      Par la convergence de ces éléments, cette lettre constitue un témoignage précis du fonctionnement de la Petite Poste parisienne 
-      pour le courrier administratif en provenance de la périphérie immédiate de la capitale en 1793.
+        Cette lettre datée du 9 avril 1783 constitue un document particulièrement significatif 
+        pour l’étude du fonctionnement des bureaux secondaires dans l’organisation postale de la fin de l’Ancien Régime. 
+        L’analyse de son parcours, de ses marques et de son traitement tarifaire permet d’observer concrètement
+        la hiérarchie effective des bureaux, la distinction juridique entre taxation et perception, 
+        ainsi que les compétences opérationnelles des bureaux secondaires en matière de réexpédition.
     </p>
 
+<!--Paragraphe 2-->
+    <p id="call-ref1">
+        Le pli est expédié en port dû depuis <strong><button class="note-btn" data-note="note1">[Bléré]</button>.</strong>, localité dotée d’un bureau secondaire. Le chiffre manuscrit « 3 », 
+        porté sur la lettre, correspond à la taxation de 3 sols calculée pour le premier parcours postal. 
+        Cette indication ne constitue pas un acquittement : sous l’Ancien Régime, le port dû n’est exigible qu’au moment
+        de la remise effective de la lettre au destinataire, la taxation n’ayant qu’une valeur indicative tant que la distribution n’a pas lieu.   
+        <a href="#ref1">[1]</a>.
+    </p>
 
+        <div class="note" id="note1">
+          <strong>Note.</strong>
+            voir la fleche bleu sur l'image 
+        </div>
+
+<!--Paragraphe 3-->
+    <p id="call-ref2">
+      Bléré relève administrativement du bureau d’Amboise, mais ce rattachement est purement hiérarchique
+      et n’implique aucun passage matériel du courrier par ce bureau. Les bureaux secondaires dirigent leur
+      correspondance vers l’axe postal régional structurant, qui conduit ici au bureau principal régional de Tours. 
+      La présence de la marque <strong><button class="note-btn" data-note="note2">[TOUR]</button>.</strong>, atteste l’intégration du pli dans ce circuit postal, tandis que l’absence de toute marque 
+      d’Amboise est pleinement conforme à la pratique effective².
+      <a href="#ref2">[2]</a>
+    </p>
+        <div class="note" id="note2">
+          <strong>Note.</strong>
+            voir la fleche ROUGE sur l'image 
+        </div>
+
+<!--Paragraphe 4-->
+    <p id="call-ref3">
+      La destination initiale est <strong>MONTRICHARD</strong>, bureau secondaire dépendant hiérarchiquement de Tours 
+      mais disposant d’une autonomie fonctionnelle complète. 
+      À l’arrivée, la lettre ne peut être remise à son destinataire ; 
+      le port dû de 3 sols n’est donc pas perçu. 
+      La taxation demeure théorique, la perception étant juridiquement subordonnée à la remise effective.<a href="#ref3">[3]</a>
+    </p>
+
+<!--Paragraphe 5-->
+    <p>
+      Le lieu de séjour du destinataire étant connu, la poste procède alors à une réexpédition officielle vers <strong><button class="note-btn" data-note="note3">[Broué]</button>.</strong>. 
+      Cette réexpédition constitue une opération postale nouvelle, juridiquement et tarifairement indépendante du premier parcours. 
+      Elle met en évidence une compétence essentielle des bureaux secondaires, pleinement habilités à initier et traiter une réexpédition sans intervention directe du bureau principal.
+    </p>        
+        <div class="note" id="note3">
+          <strong>Note.</strong>
+            voir la fleche Marron sur l'image 
+        </div>
+
+<!--Paragraphe 6-->
+    <p id="call-ref4">
+        À Montrichard, le port du renvoi est acquitté d’avance, comme l’indique la mention manuscrite
+       <strong><button class="note-btn" data-note="note4">[« Port Payé à Montrichard »]</button></strong>,Cette indication ne concerne que le trajet Montrichard–Broué et n’a aucune 
+       incidence rétroactive sur la taxation initiale. L’emploi d’une simple mention manuscrite, sans cachet spécifique, 
+       est conforme aux usages observés dans les bureaux secondaires à la fin du XVIIIᵉ siècle.<a href="#ref4">[4]</a>.
+    </p>
+        <div class="note" id="note4">
+          <strong>Note.</strong>
+            voir la fleche verte sur l'image 
+        </div>
+
+<!--Paragraphe 6-->
+    <p id="call-ref5">
+      La distance séparant Montrichard de Broué, de l’ordre de 80 à 90 kilomètres, 
+      correspond à une tranche tarifaire voisine de celle du premier trajet ; 
+      pour une lettre simple en 1783, le port payé est très vraisemblablement de 3 sols. 
+      Conformément à l’usage, le montant du port acquitté n’est pas reporté sur le pli. <a href="#ref5">[5]</a>.
+      Le coût postal théorique cumulé du parcours peut ainsi être évalué à 6 sols, la somme réellement perçue par la poste se limitant au seul port du renvoi
+    </p>
+
+<!--Paragraphe 7-->
+    <p>
+      Enfin, la présence, au verso, de la mention manuscrite <strong>« lettre » </strong> relève d’un usage d’identification 
+      administrative encore courant à la fin de l’Ancien Régime. Portée en dehors de toute marque de taxation ou de contrôle, 
+      cette annotation visait à qualifier la nature de l’envoi dans le cadre de la gestion interne du courrier, 
+      notamment lors des opérations de tri, de classement ou de réexpédition. 
+      Elle ne correspond ni à une indication de port, ni à un acquittement, ni à une instruction tarifaire; 
+      dépourvue de toute valeur comptable, elle est sans incidence sur la perception des ports et ne modifie en rien l’analyse du traitement postal du pli.
+    </p>
+            <!-- FIGURE GAUCHE : vignette associée AU paragraphe suivant -->
+        <figure class="float-left">
+          <img src="../Images/blereverso.png"
+              alt="Annotation manuscrite 13 au verso">
+          <figcaption>
+            Fig. 2 — Présence, au verso, de la mention manuscrite «lettre». 
+          </figcaption>
+        </figure>
+
+<!--Paragraphe 8-->        
+    <p>
+      Ce pli apporte ainsi une contribution directe à l’étude du fonctionnement réel 
+      des bureaux secondaires sous l’Ancien Régime. 
+      Il met en évidence leur rôle actif au sein du réseau postal, leur autonomie opérationnelle en matière de distribution, 
+      de non-distribution et de réexpédition, ainsi que leur pleine intégration dans une hiérarchie régionale structurée autour des bureaux principaux. 
+      Loin de simples relais subalternes, les bureaux secondaires apparaissent ici comme des acteurs pleinement opérationnels du système postal de la Poste royale.
+    </p><br>
 
     <!-- ================= RÉFÉRENCES ================= -->
-    <section class="references">
-      <h2>Références</h2>
-      <ol>
-        <li id="ref1">
-          CHAUVET — <em>La Petite Poste de Paris</em>, passim.
-          <a href="#article">↩</a>
-        </li>
+<section class="references">
+  <h2>Références</h2>
+  <ol>
+<!--Note1-->    
+    <li id="ref1">
+       1. VAILLÉ Eugène, Histoire générale des Postes françaises, t. III : Les Postes aux XVIIᵉ et XVIIIᵉ siècles, Paris, Presses universitaires de France, 1947.
+      <a href="#call-ref1" aria-label="Retour au passage cité">↩</a>
+    </li>
 
-        <li id="ref2">
-          POTHION, Les marques postales françaises 1700-1850.
-          <a href="#article">↩</a>
-        </li>
+<!--Note2-->     
+<li id="ref2">
+      2. VAILLÉ Eugène, Histoire générale des Postes françaises, t. III, op. cit. ;
+      LENAIN Louis, Manuel de l’histoire postale française, Paris, Yvert et Tellier, 1959.
+      <a href="#call-ref2" aria-label="Retour au passage cité">↩</a>
+    </li>
 
-        <li id="ref3">
-          Décret des 26 août – 2 septembre 1792, état des franchises postales
-          <a href="#article">↩</a>
-        </li>
+<!--Note3--> 
+    <li id="ref3">
+      3. ABENSUR Robert, communications et études de marcophilie spécialisées sur la taxation des lettres sous 
+      l’Ancien Régime, notamment sur la distinction entre taxation et perception et la non-perception en cas de non-distribution.
+      <a href="#call-ref3" aria-label="Retour au passage cité">↩</a>
+    </li>
 
-        <li id="ref4">
-          Notices spécialisées sur les bureaux alphabétiques de la Petite Poste, bureau K (service de la banlieue).
-          <a href="#article">↩</a>
-        </li>
-
-      </ol>
-    </section>
+<!--Note4--> 
+    <li id="ref4">
+      4. Règlements et usages de la Poste royale, XVIIᵉ–XVIIIᵉ siècles, textes réglementaires relatifs aux réexpéditions et au port payé.
+      <a href="#call-ref4" aria-label="Retour au passage cité">↩</a>
+    </li>
+<!--Note5--> 
+    <li id="ref5">
+      5. LENAIN Louis, Manuel de l’histoire postale française, op. cit., chapitres relatifs aux ports acquittés et à l’absence d’inscription en port payé.
+      <a href="#call-ref5" aria-label="Retour au passage cité">↩</a>
+    </li>
+  </ol>
+</section>
 
     <!-- ================= PAGINATION ================= -->
     <nav class="pagination" aria-label="Pagination de l’article">
       <a aria-disabled="true">← Page précédente</a>
-      <a href="../Petit-Poste/petitePosteDeParis.html">Page suivante →</a>
+      <a href="../index.html">Accueil →</a>
     </nav>
 
   </article>
@@ -252,3 +266,5 @@
 
 </body>
 </html>
+
+
