--- a/index.html
+++ b/index.html
@@ -100,50 +100,53 @@
   </section>
 
   <!-- ===== SECTION UNIQUE ===== -->
-  <section class="home-section">
+<section class="home-section" aria-labelledby="home-section-title">
 
-    <article class="home-article">
+  <h2 id="home-section-title" class="visually-hidden">
+    Présentation et derniers articles
+  </h2>
 
-      <h2>Présentation</h2>
+  <article class="home-article">
 
-      <p>
-        Ce site a pour vocation de proposer des
-        <strong>articles rigoureusement documentés</strong>
-        sur l’histoire postale française, en particulier pour la période
-        de l’Ancien Régime et de la Révolution.
-      </p>
+    <h3>Présentation</h3>
 
-      <p>
-        Les études reposent sur l’examen direct des lettres,
-        l’analyse des marques postales,
-        et le recours systématique aux sources de référence
-        (ouvrages spécialisés, décrets, notices administratives).
-      </p>
+    <p>
+      Ce site a pour vocation de proposer des
+      <strong>articles rigoureusement documentés</strong>
+      sur l’histoire postale française, en particulier pour la période
+      de l’Ancien Régime et de la Révolution.
+    </p>
 
-      <h2>Derniers articles</h2>
+    <p>
+      Les études reposent sur l’examen direct des lettres,
+      l’analyse des marques postales,
+      et le recours systématique aux sources de référence
+      (ouvrages spécialisés, décrets, notices administratives).
+    </p>
 
-      <h3>
-        <a href="./DossierArticles/1lettreFrancheDeSevres.html">
-          Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793
-        </a>
-      </h3>
+    <h3>Derniers articles</h3>
 
-      <p>
-        Analyse complète d’une lettre administrative en franchise,
-        depuis son dépôt à Sèvres jusqu’à sa distribution par la Petite Poste,
-        avec étude des marques « SEVE », « PP » triangulaire,
-        et des annotations manuscrites internes.
-      </p>
+    <h4>
+      <a href="./DossierArticles/1lettreFrancheDeSevres.html">
+        Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793
+      </a>
+    </h4>
 
-      <p class="read-more">
-        <a href="./DossierArticles/1lettreFrancheDeSevres.html">
-          Lire l’article →
-        </a>
-      </p>
+    <p>
+      Analyse complète d’une lettre administrative en franchise,
+      depuis son dépôt à Sèvres jusqu’à sa distribution par la Petite Poste,
+      avec étude des marques « SEVE », « PP » triangulaire,
+      et des annotations manuscrites internes.
+    </p>
 
-    </article>
+    <p class="read-more">
+      <a href="./DossierArticles/1lettreFrancheDeSevres.html">
+        Lire l’article →
+      </a>
+    </p>
 
-  </section>
+  </article>
+</section>
 
 </main>
 
