--- a/DossierArticles/1lettreFrancheDeSevres.html
+++ b/DossierArticles/1lettreFrancheDeSevres.html
@@ -232,11 +232,11 @@
   </ol>
 </section>
 
-    <!-- ================= PAGINATION ================= -->
-    <nav class="pagination" aria-label="Pagination de l’article">
-      <a aria-disabled="true">← Page précédente</a>
-      <a href="../index.html">Accueil →</a>
-    </nav>
+<!-- ================= PAGINATION ================= -->
+<nav class="pagination" aria-label="Pagination de l’article">
+  <a href="./2lettreDeBlere .html" rel="prev">← Page précédente</a>
+  <a href="../index.html">Accueil →</a>
+</nav>
 
   </article>
 </main>
