--- a/DossierArticles/2lettreDeBlere .html
+++ b/DossierArticles/2lettreDeBlere .html
@@ -243,8 +243,8 @@
 
     <!-- ================= PAGINATION ================= -->
     <nav class="pagination" aria-label="Pagination de l’article">
-      <a aria-disabled="true">← Page précédente</a>
-      <a href="../index.html">Accueil →</a>
+      <a href="./1lettreFrancheDeSevres.html" rel="prev">← Page précédente</a>
+      <a href="&">Page suivante →</a>
     </nav>
 
   </article>
