--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <h3>Catégories</h3>
   <ul>
-    <li><a href="./Petit-Poste/petitePosteDeParis.html">Petite Poste de Paris</a></li>
+    <li><a href="https://enniogianni.github.io/leger/">Cote des marques postales</a></li>
     <li><a href="./categories/bureaux-secondaires.html">Bureaux secondaires</a></li>
     <li><a href="./categories/marques-cachets.html">Marques et cachets</a></li>
     <li><a href="./categories/revolution.html">Révolution & Empire</a></li>
@@ -127,9 +127,7 @@
     <h3>Derniers articles</h3>
 
     <h4>
-      <a href="./DossierArticles/1lettreFrancheDeSevres.html">
         Lettre franche de Sèvres passée par la Petite Poste de Paris en 1793
-      </a>
     </h4>
 
     <p>
