--- a/DossierArticles/1lettreFrancheDeSevres.html
+++ b/DossierArticles/1lettreFrancheDeSevres.html
@@ -18,6 +18,7 @@
 
   <script defer src="../js/menu.js"></script>
   <script defer src="../js/scroll.js"></script>
+  <script defer src="../js/categorieMenu.js"></script>
 
         <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../Logo/books_library_1768.ico">
@@ -65,14 +66,7 @@
 <nav id="sideMenu" aria-label="Menu principal">
   <button id="closeMenu">Fermer ✕</button>
 
-  <h3>Catégories</h3>
-  <ul>
-    <li><a href="./categories/petite-poste.html">Petite Poste de Paris</a></li>
-    <li><a href="./categories/bureaux-secondaires.html">Bureaux secondaires</a></li>
-    <li><a href="./categories/marques-cachets.html">Marques et cachets</a></li>
-    <li><a href="./categories/revolution.html">Révolution & Empire</a></li>
-    <li><a href="./bibliographie.html">Bibliographie</a></li>
-  </ul>
+  <div id="categorie-menu"></div>
 </nav>
 
 <!-- ================= CONTENU PRINCIPAL ================= -->
@@ -234,8 +228,8 @@
 
 <!-- ================= PAGINATION ================= -->
 <nav class="pagination" aria-label="Pagination de l’article">
-  <a href="./2lettreDeBlere .html" rel="prev">← Page précédente</a>
-  <a href="../index.html">Accueil →</a>
+  <a href="../index.html" rel="prev">← Page précédente</a>
+  <a href="../DossierArticles/2lettreDeBlere .html">Page suivante →</a>
 </nav>
 
   </article>
