--- a/DossierArticles/2lettreDeBlere .html
+++ b/DossierArticles/2lettreDeBlere .html
@@ -257,6 +257,9 @@
     <div id="notePopupBody"></div>
   </div>
 </div>
+    <button 
+      id="scrollTopBtn" aria-label="Remonter en haut de la page" title="Remonter">
+    </button>
 
 </body>
 </html>
