--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
 <footer>
   © Histoire postale
 </footer>
-<button id="scrollTopBtn"
-        aria-label="Remonter en haut de la page">
-  ↑
-</button>
+    <button 
+      id="scrollTopBtn" aria-label="Remonter en haut de la page" title="Remonter">
+    </button>
   <script src="./js/recherche-simple.js"></script>
 
 </body>
