--- a/DossierArticles/1lettreFrancheDeSevres.html
+++ b/DossierArticles/1lettreFrancheDeSevres.html
@@ -248,6 +248,9 @@
     <div id="notePopupBody"></div>
   </div>
 </div>
+    <button 
+      id="scrollTopBtn" aria-label="Remonter en haut de la page" title="Remonter">
+    </button>
 
 </body>
 </html>
