--- a/DossierArticles/2lettreDeBlere.html
+++ b/DossierArticles/2lettreDeBlere.html
@@ -13,12 +13,14 @@
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/article.css">
+  <link rel="stylesheet" href="../css/langues.css">
 
   <!-- JS -->
 
   <script defer src="../js/menu.js"></script>
   <script defer src="../js/scroll.js"></script>
   <script defer src="../js/categorieMenu.js"></script>
+  <script defer src="../js/langues.js"></script>
 
         <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../Logo/books_library_1768.ico">
